--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
     </repositories>
 
     <dependencies>
+	<!-- https://mvnrepository.com/artifact/com.couchbase.client/java-client -->
+        <dependency>
+            <groupId>com.couchbase.client</groupId>
+            <artifactId>java-client</artifactId>
+            <version>2.7.2</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
         <dependency>
